--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
-rvm: 1.9.3
+language: ruby
+rvm:
+  - 1.9.3
+  - 2.0.0
+  - 2.1.0
+gemfile:
+  - gemfiles/Gemfile.puppet-3.3.0
+  - gemfiles/Gemfile.puppet-3.4.0
 notifications:
   email:
     - 'inkblot@movealong.org'
-env:
-  - PUPPET_VERSION=3.3.0
-  - PUPPET_VERSION=3.4.0
