--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
 env:
   - PUPPET_VERSION=3.3.0
   - PUPPET_VERSION=3.4.0
+  - PUPPET_VERSION=3.5.0
   - PUPPET_VERSION=3.6.0
   - PUPPET_VERSION=3.7.0
 gemfile: Gemfile.travis
