Make it all work again.
Previous iterations and even a release were all broken. The module works again,
sorry for the interlude.

- Giving up on params and moving to module_data (WIP)
- Change the Package and Service references to the static 'bind' name
- Add a meager amount of test coverage

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,9 +1,9 @@
----
 fixtures:
   forge_modules:
     concat:
       repo: "puppetlabs/concat"
       ref: "1.0.0"
     stdlib: "puppetlabs/stdlib"
+    module_data: "ripienaar/module_data"
   symlinks:
     bind: "#{source_dir}"
