--- a/data/osfamily/RedHat.yaml
+++ b/data/osfamily/RedHat.yaml
@@ -7,7 +7,7 @@ bind::params::bind_service: 'named'
 bind::params::nsupdate_package: 'bind-utils'
 
 bind::confdir: '/etc/named'
-bind::cachedir: '/var/named/data'
+bind::cachedir: '/var/named'
 bind::rndc: true
 
 bind::updater::keydir: '/etc/named/keys'
