Parameterize the random device for dnssec-keygen
`dnssec-keygen` uses `/dev/random` by default, but this is slow in some
scenarios where `/dev/urandom` is both faster and provides sufficient utility.
Allow override via the `bind::random_device` hiera key.

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -4,5 +4,6 @@ bind::params::supported: false
 bind::forwarders: ''
 bind::dnssec: true
 bind::version: ''
+bind::random_device: '/dev/random'
 
 bind::updater::keydir: '/etc/nsupdate-keys'
