Leave distro files alone
Distro packaging includes a lot of configuration files that this module tries
and fails to get rid of, but with exclusions. Those don't always work for
mysterious reasons. Leave the distributed files intact as much as possible,
with just the necessary files touched to effect the desired configuration.

Also, make inclusion of named.conf.local optional (default false) and stop
ensuring that there's at least an empty one.

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -5,5 +5,6 @@ bind::forwarders: ''
 bind::dnssec: true
 bind::version: ''
 bind::random_device: '/dev/random'
+bind::include_local: false
 
 bind::updater::keydir: '/etc/nsupdate-keys'
