Support for LDAP dynamic DB
Conflicts:
	data/osfamily/Debian.yaml
	manifests/params.pp

--- a/data/osfamily/Debian.yaml
+++ b/data/osfamily/Debian.yaml
@@ -1,12 +1,14 @@
 ---
-bind::defaults::supported: true
-bind::defaults::bind_user: 'bind'
-bind::defaults::bind_group: 'bind'
-bind::defaults::bind_package: 'bind9'
-bind::defaults::bind_service: 'bind9'
-bind::defaults::nsupdate_package: 'dnsutils'
-bind::defaults::confdir: '/etc/bind'
-bind::defaults::namedconf: '/etc/bind/named.conf'
-bind::defaults::cachedir: '/var/cache/bind'
+bind::params::supported: true
+bind::params::bind_user: 'bind'
+bind::params::bind_group: 'bind'
+bind::params::bind_package: 'bind9'
+bind::params::bind_service: 'bind9'
+bind::params::nsupdate_package: 'dnsutils'
+bind::params::dyndb_ldap_package: 'bind9-dyndb-ldap'
+bind::namedconf: '/etc/bind/named.conf'
+bind::confdir: '/etc/bind'
+bind::cachedir: '/var/cache/bind'
+bind::rndc: true
 
 bind::updater::keydir: '/etc/bind/keys'
