--- a/data/osfamily/RedHat.yaml
+++ b/data/osfamily/RedHat.yaml
@@ -5,6 +5,7 @@ bind::params::bind_group: 'named'
 bind::params::bind_package: 'bind'
 bind::params::bind_service: 'named'
 bind::params::nsupdate_package: 'bind-utils'
+bind::params::managed_keys_directory: '/var/named/dynamic'
 bind::namedconf: '/etc/named.conf'
 bind::confdir: '/etc/named'
 bind::cachedir: '/var/named'
