Put confdir in the params class, and more..
Fix a bunch of warnings whne using the bind::updater class by moving confdir to
the params class. In order for this to work, the bind and bind::updater classes
both now inherit from params. Also, fix the default value for
managed_key_directory to something that's actually falsey.

--- a/data/osfamily/RedHat.yaml
+++ b/data/osfamily/RedHat.yaml
@@ -6,8 +6,8 @@ bind::params::bind_package: 'bind'
 bind::params::bind_service: 'named'
 bind::params::nsupdate_package: 'bind-utils'
 bind::params::managed_keys_directory: '/var/named/dynamic'
+bind::params::confdir: '/etc/named'
 bind::namedconf: '/etc/named.conf'
-bind::confdir: '/etc/named'
 bind::cachedir: '/var/named'
 bind::rndc: true
 
