--- a/spec/fixtures/hiera/common.yaml
+++ b/spec/fixtures/hiera/common.yaml
@@ -1,3 +1,3 @@
 ---
-bind::params::confdir: '_CONFDIR_'
-bind::namedconf: '_NAMEDCONF_'
+bind::defaults::confdir: '_CONFDIR_'
+bind::defaults::namedconf: '_NAMEDCONF_'
