Update to support puppet 4

--- a/hiera.yaml
+++ b/hiera.yaml
@@ -2,8 +2,8 @@
 version: 4
 datadir: data
 hierarchy:
-  - name: "OS family"
+  - name: "Platform"
     backend: yaml
-    path: "osfamily/%{facts.os.family}"
-  - name: "common"
-    backend: yaml
+    paths:
+      - "osfamily/%{facts.os.family}"
+      - "common"
