Push the class defaults into hiera
The bind class parameter defaults values are meant to be supplied via module
data. Really, these ought to come through the bind::defaults class from hiera,
but that class is currently the home of platform defaults which are not meant
to be overridden by the user. This is a first step, maybe? A normalization for
sure.

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -3,8 +3,11 @@ bind::defaults::supported: false
 bind::defaults::random_device: '/dev/random'
 
 bind::forwarders: ''
+bind::forward: ''
 bind::dnssec: true
+bind::filter_ipv6: false
 bind::version: ''
+bind::auth_nxdomain: false
 bind::include_local: false
 
 bind::updater::keydir: '/etc/nsupdate-keys'
