Explicitly reference the bind keys file
Debian supplies the bind keys at /etc/bind/bind.keys and RedHat supplies it at
/etc/named.iscdlv.key. Add the directive that references this file. I think it
may have "just worked" on Debian, baesd on the information at
https://www.isc.org/downloads/bind/bind-keys/

--- a/data/osfamily/RedHat.yaml
+++ b/data/osfamily/RedHat.yaml
@@ -12,5 +12,6 @@ bind::defaults::cachedir: '/var/named'
 bind::defaults::logdir: '/var/log/named'
 bind::defaults::default_zones_include: '/etc/named.default-zones.conf'
 bind::defaults::default_zones_source: 'puppet:///modules/bind/RedHat/named.default-zones.conf'
+bind::defaults::isc_bind_keys: '/etc/named.iscdlv.key'
 
 bind::updater::keydir: '/etc/named/keys'
