--- a/data/osfamily/Debian.yaml
+++ b/data/osfamily/Debian.yaml
@@ -10,5 +10,6 @@ bind::defaults::namedconf: '/etc/bind/named.conf'
 bind::defaults::cachedir: '/var/cache/bind'
 bind::defaults::logdir: '/var/log/bind'
 bind::defaults::default_zones_include: '/etc/bind/named.conf.default-zones'
+bind::defaults::isc_bind_keys: '/etc/bind/bind.keys'
 
 bind::updater::keydir: '/etc/bind/keys'
