Gitignore extended & rubocop added
From gareth/puppet-module-skeleton example :
https://github.com/garethr/puppet-module-skeleton

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 pkg/
+.*.sw?
+spec/fixtures/manifests
+spec/fixtures/modules
+.rspec_system
+.vagrant
+.bundle
+vendor
+junit
+log
+.yardoc
+coverage
