Changed hiera data organization
It now reflects filesystem hierarchy

--- a/hiera.yaml
+++ b/hiera.yaml
@@ -5,6 +5,6 @@ hierarchy:
   - name: "Platform"
     backend: yaml
     paths:
-      - "osfamily/%{facts.os.name}-%{facts.os.release.major}"
+      - "osfamily/%{facts.os.name}/%{facts.os.release.major}"
       - "osfamily/%{facts.os.family}"
       - "common"
